--- a/src/Roller/styles.css
+++ b/src/Roller/styles.css
@@ -11,13 +11,13 @@
 }
 
 .lds-roller div:after {
-  content: " ";
+  content: ' ';
   display: block;
   position: absolute;
   width: 7px;
   height: 7px;
   border-radius: 50%;
-  background: #fff;
+  background: salmon;
   margin: -4px 0 0 -4px;
 }
 
