--- a/src/Heart/styles.css
+++ b/src/Heart/styles.css
@@ -13,7 +13,7 @@
   position: absolute;
   width: 32px;
   height: 32px;
-  background: #fff;
+  background: salmon;
   animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
@@ -24,7 +24,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  background: #fff;
+  background: salmon;
 }
 
 .lds-heart div:before {
